--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
+/* Bloc parents */
 .proj-prev {
     color: #fff;
     margin-bottom: .25rem;
+}
+
+/* Création d'un élément */
+.proj-prev__heading {
+    font-size: 4rem;
+    padding-left: 2.5rem;
+    margin: 0;
+    line-height: 6rem;
 }
