--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,32 @@
 .proj-prev--mint {
     color: #15DEA5;
 }
+
+/* Bloc nav */
+.nav {
+    padding-right: 6rem;
+    text-align: right;
+}
+
+/* Élement link du bloc nav */
+.nav__link {
+    display: inline;
+    font-size: 3rem;
+    padding-left: 1.5rem;
+}
+
+/* Ancre de l'élément link */
+.nav__link a {
+    text-decoration: none;
+    color: #D6FFF5;
+}
+
+/* Modificateur active à l'élément nav__link du bloc nav */
+.nav__link--active {
+    color: #001534;
+}
+
+/* hover de l'ancre de l'élément link */
+.nav__link a:hover {
+    color: #fff;
+}
